infra/manifests/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: jellyfin
      app.kubernetes.io/name: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: jellyfin
        app.kubernetes.io/name: jellyfin
    spec:
      containers:
      - env:
        - name: JELLYFIN_PublishedServerUrl
          value: https://jellyfin.brandwhisper.cloud
        image: jellyfin/jellyfin:10.11.6
        livenessProbe:
          httpGet:
            path: /health
            port: http
          periodSeconds: 15
        name: jellyfin
        ports:
        - containerPort: 8096
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          limits:
            cpu: '2'
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 512Mi
        startupProbe:
          failureThreshold: 10
          httpGet:
            path: /health
            port: http
          periodSeconds: 3
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /media
          name: media
      nodeSelector:
        kubernetes.io/hostname: master
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: media
        persistentVolumeClaim:
          claimName: jellyfin-media
